--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         project-path: 
-        - 'build.ppj'
+        - 'build_ci.ppj'
         
     env:
       python-version: 3.x
