--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
     - name: Prepare upload
       if: success()
       run: |
-        cd repo\dist
+        cd dist
         7z x *zip -o*
         echo "build_name=$(Get-ChildItem -Filter *. -Name)" >> ${Env:GITHUB_ENV}
     - name: Upload release
@@ -70,4 +70,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ${{ env.build_name }}
-        path: ./repo/dist/${{ env.build_name }}
+        path: ./dist/${{ env.build_name }}
