--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: ./repo
-
+        
     - name: Set up Python ${{ env.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -71,3 +71,27 @@ jobs:
       with:
         name: ${{ env.build_name }}
         path: ./dist/${{ env.build_name }}
+    - name: Get current date
+      id: date
+      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+    - name: Create Github Release
+      if: success() && github.ref == 'refs/heads/release'
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        draft: false
+        prerelease: false
+        release_name: ${{ steps.date.outputs.date }}
+        tag_name: ${{ steps.date.outputs.date }}
+        body_path: CHANGELOG.md
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+    - name: Upload artifact to github release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/${{ env.build_name }}
+        asset_name: ${{ env.build_name }}
+        asset_content_type: application/gzip
